Moved behind the sceens ocp install to lab 01.

--- a/lab01.html
+++ b/lab01.html
@@ -77,12 +77,12 @@
             </div>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
-            <div style="width: 100%; height: 180px; color: white">
-                <h2 style="color: white;">BEHIND THE SCENES</h2>
-                <h4 style="color: white">WHAT'S IN AN OCP INSTALL?</h4>
+        <section>
+            <div style="width: 100%; height: 180px">
+                <h2>INTERMEZZO</h2>
+                <h4>BEHIND THE SCENES: WHAT'S IN AN OCP INSTALL?</h4>
             </div>
-            <div style="width: 100%; height: 380px; text-align: left; color: white">
+            <div style="width: 100%; height: 380px; text-align: left">
                 <ol>
                     <li>Checks for dependencies to support install (OCP, engine, oc client, VM)</li>
                     <li>Pre-configures a specific docker-machine (VM)</li>
@@ -91,12 +91,12 @@
             </div>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
-            <div style="width: 100%; height: 180px; color: white">
-                <h2 style="color: white;">BEHIND THE SCENES</h2>
-                <h4 style="color: white">WHAT DEPENDENCY CHECKS?</h4>
+        <section>
+            <div style="width: 100%; height: 180px">
+                <h2>INTERMEZZO</h2>
+                <h4>BEHIND THE SCENES: DEPENDENCY CHECKS?</h4>
             </div>
-            <div style="width: 100%; height: 200px; text-align: left; color: white">
+            <div style="width: 100%; height: 200px; text-align: left">
                 <ol>
                     <li>Checks for KVM or VirtualBox install and version validation</li>
                     <li>Checks for container engine install and version validation</li>
@@ -109,12 +109,12 @@
             </div>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
-            <div style="width: 100%; height: 180px; color: white">
-                <h2 style="color: white;">BEHIND THE SCENES</h2>
-                <h4 style="color: white">DETAILS PRE-CONFIGURED VM</h4>
+        <section>
+            <div style="width: 100%; height: 180px">
+                <h2>INTERMEZZO</h2>
+                <h4>BEHIND THE SCENES: PRE-CONFIGURED VM?</h4>
             </div>
-            <div style="width: 100%; height: 380px; text-align: left; color: white">
+            <div style="width: 100%; height: 380px; text-align: left">
                 <ol>
                     <li>Using <code>docker-machine</code> as tool for defining a VM</li>
                     <li>Specify the VM driver, cpu allocation, memory allocation, identify our internal insecure VM registry</li>
@@ -124,12 +124,12 @@
             </div>
         </section>
 
-        <section data-background="images/rh-images/rh-bg-light.png" data-background-size="cover" data-background-position="bottom">
-            <div style="width: 100%; height: 180px; color: white">
-                <h2 style="color: white;">BEHIND THE SCENES</h2>
-                <h4 style="color: white">DETAILS HOW TO INSTALL OCP ON VM</h4>
+        <section>
+            <div style="width: 100%; height: 180px">
+                <h2>INTERMEZZO</h2>
+                <h4>BEHIND THE SCENES: INSTALL OCP ON THE VM?</h4>
             </div>
-            <div style="width: 100%; height: 380px; text-align: left; color: white">
+            <div style="width: 100%; height: 380px; text-align: left">
                 <ol>
                     <li>Using <code>oc</code> client to spin up OCP on previously defined VM</li>
                     <li>Specifically, using: <code>oc cluster up</code>, but need OCP instead of community OpenShift) and persistence configuration for stop / restarting</li>
