Fixed typo introduction slides.

--- a/introduction.html
+++ b/introduction.html
@@ -415,9 +415,9 @@
             <div style="width: 1056px; height: 450px;">
                 <h5>
                     Your tasked as the lead developer of the Destinasia travel discount project to set up
-                    a development environment in the Cloud for container-based application services deployed.
+                    a development environment in the Cloud for container-based application services deployments.
                     <br><br>
-                    Once it's set up,you're validating the services using end-to-end testing. Tasks include installing OpenShift
+                    Once it's set up, you're validating the services using end-to-end testing. Tasks include installing OpenShift
                     Container Platform (OCP), JBoss Enterprise Application Platform (EAP), JBoss Business Rules Management
                     System (BRMS), several containerized web services and testing the solution using a REST client.
                     <br><br>
