--- a/lab01.html
+++ b/lab01.html
@@ -80,21 +80,24 @@
         <section>
             <div style="width: 100%; height: 180px">
                 <h2>INTERMEZZO</h2>
-                <h4>BEHIND THE SCENES: WHAT'S IN AN OCP INSTALL?</h4>
+                <h4>UNDER THE HOOD: WHAT'S IN AN OCP INSTALL?</h4>
             </div>
-            <div style="width: 100%; height: 380px; text-align: left">
+            <div style="width: 100%; height: 280px; text-align: left">
                 <ol>
                     <li>Checks for dependencies to support install (OCP, engine, oc client, VM)</li>
                     <li>Pre-configures a specific docker-machine (VM)</li>
                     <li>oc client pulls OCP image from Red Hat registry to install on previously specific pre-configured docker-machine (VM)</li>
                 </ol>
             </div>
+            <div style="height: 400px" align="right">
+                <img width="50%" height="50%" align="right" src="images/introduction/image16.png">
+            </div>
         </section>
 
         <section>
             <div style="width: 100%; height: 180px">
                 <h2>INTERMEZZO</h2>
-                <h4>BEHIND THE SCENES: DEPENDENCY CHECKS?</h4>
+                <h4>UNDER THE HOOD: DEPENDENCY CHECKS?</h4>
             </div>
             <div style="width: 100%; height: 200px; text-align: left">
                 <ol>
@@ -112,9 +115,9 @@
         <section>
             <div style="width: 100%; height: 180px">
                 <h2>INTERMEZZO</h2>
-                <h4>BEHIND THE SCENES: PRE-CONFIGURED VM?</h4>
+                <h4>UNDER THE HOOD: PRE-CONFIGURED VM?</h4>
             </div>
-            <div style="width: 100%; height: 380px; text-align: left">
+            <div style="width: 100%; height: 280px; text-align: left">
                 <ol>
                     <li>Using <code>docker-machine</code> as tool for defining a VM</li>
                     <li>Specify the VM driver, cpu allocation, memory allocation, identify our internal insecure VM registry</li>
@@ -122,14 +125,17 @@
                     <li>Name VM <code>openshift</code>, important to provide target to stop and start VM later...</li>
                 </ol>
             </div>
+            <div style="height: 400px" align="right">
+                <img width="50%" height="50%" align="right" src="images/introduction/image16.png">
+            </div>
         </section>
 
         <section>
             <div style="width: 100%; height: 180px">
                 <h2>INTERMEZZO</h2>
-                <h4>BEHIND THE SCENES: INSTALL OCP ON THE VM?</h4>
+                <h4>UNDER THE HOOD: INSTALL OCP ON THE VM?</h4>
             </div>
-            <div style="width: 100%; height: 380px; text-align: left">
+            <div style="width: 100%; height: 280px; text-align: left">
                 <ol>
                     <li>Using <code>oc</code> client to spin up OCP on previously defined VM</li>
                     <li>Specifically, using: <code>oc cluster up</code>, but need OCP instead of community OpenShift) and persistence configuration for stop / restarting</li>
