Updated for OCP 3.6.

--- a/introduction.html
+++ b/introduction.html
@@ -134,7 +134,7 @@
                     <li>Base needs:</li>
                     <ul>
                         <li><a href="https://store.docker.com/search?offering=community&type=edition" style="color: midnightblue" target="_blank"><b>Docker v17.03</b></a></li>
-                        <li><a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: midnightblue" target="_blank"><b>OpenShift CLI v3.5.5.5</b></a></li>
+                        <li><a href="https://access.redhat.com/downloads/content/290" style="color: midnightblue" target="_blank"><b>OpenShift CLI v3.6.173</b></a></li>
                         <li><a href="https://www.virtualbox.org/wiki/Downloads" style="color: midnightblue" target="_blank"><b>VirtualBox (Mac / Windows)</b></a></li>
                         <li><a href="https://github.com/dhiltgen/docker-machine-kvm/releases" style="color: midnightblue" target="_blank"><b>KVM (Linux)</b></a></li>
                         <li>Ansible playbook tooling:</li>
@@ -427,7 +427,7 @@
             </div>
             <div style="width: 1056px; height: 150px;">
                 <h5 style="color: grey"><b>Pre-requisites:</b> <i>Laptop with 16GB RAM, Docker 17.03, OpenShift Container
-                    Platform 3.5, JBoss EAP 7.0, JBoss BRMS 6.4</i></h5>
+                    Platform 3.6, JBoss EAP 7.0, JBoss BRMS 6.4</i></h5>
             </div>
         </section>
 
