--- a/lab01.html
+++ b/lab01.html
@@ -214,13 +214,13 @@
                 <br>
                 <ul>
                     <li><p style="font-size: 24px; color: darkred"><code>"OpenShift CLI tooling is required but not installed yet... download here:
-                        <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: midnightblue"
-                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a>"</code></p></li>
+                        <a href="https://access.redhat.com/downloads/content/290" style="color: midnightblue"
+                           target="_blank">https://access.redhat.com/downloads/content/290</a>"</code></p></li>
                     <li><p style="font-size: 24px; color: darkred"><code>"OpenShift command line tools installed... checking for valid version...
                         Version of installed OpenShift command line tools is vX.X.X, must be v3.x.x or higher...<br>
                         Download for Mac/Linux/Windows here:<br>
-                        <a href="https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk" style="color: midnightblue"
-                           target="_blank">https://drive.google.com/open?id=0B9WSViV5BZ4aVXV5U3F4LVVmWVk</a>"</code></p></li>
+                        <a href="https://access.redhat.com/downloads/content/290" style="color: midnightblue"
+                           target="_blank">https://access.redhat.com/downloads/content/290</a>"</code></p></li>
                 </ul>
                 <br><br>
                 <b>Fix:</b>
