Added link to contact me for oc client trial.

--- a/lab01.html
+++ b/lab01.html
@@ -226,7 +226,7 @@
                 <b>Fix:</b>
                 <br>
                 <ul>
-                    <li>Download and install OpenShift 'oc' client.</li>
+                    <li>Download and install OpenShift 'oc' client. (Note: <a href="http://www.schabell.org/p/contact.html" target="_blank">contact me for a trial</a> if no login for Red Hat Portal)</li>
                 </ul>
             </div>
         </section>
