Added link to contact me for oc client trial.

--- a/lab01.html
+++ b/lab01.html
@@ -222,12 +222,12 @@
                         <a href="https://access.redhat.com/downloads/content/290" style="color: midnightblue"
                            target="_blank">https://access.redhat.com/downloads/content/290</a>"</code></p></li>
                 </ul>
-                <br><br>
+                <br>
                 <b>Fix:</b>
                 <br>
                 <ul>
-                    <li>Download and install OpenShift 'oc' client.
-                        (Note: <a href="http://www.schabell.org/p/contact.html" target="_blank">contact me for a trial</a>
+                    <li>Download and install OpenShift 'oc' client.</li>
+                    <li>(Note: <a href="http://www.schabell.org/p/contact.html" target="_blank">contact me for a trial</a>
                         if no login for Red Hat Portal)</li>
                 </ul>
             </div>
