Added link to contact me for oc client trial.

--- a/lab01.html
+++ b/lab01.html
@@ -227,8 +227,8 @@
                 <br>
                 <ul>
                     <li>Download and install OpenShift 'oc' client.</li>
-                    <li>(Note: <a href="http://www.schabell.org/p/contact.html" target="_blank">contact me for a trial</a>
-                        if no login for Red Hat Portal)</li>
+                    <li><a href="http://www.schabell.org/p/contact.html" target="_blank">Contact me directly</a> for
+                        a trial if no login available Red Hat Portal</li>
                 </ul>
             </div>
         </section>
