Updated images for lab 02.

--- a/lab02.html
+++ b/lab02.html
@@ -186,8 +186,7 @@
                 <h5>Your IP address may differ, see console output</h5>
             </div>
             <div style="width: 1056px; height: 220px;" align="left">
-                <a href="http://destinasia-rules-demo.192.168.99.100.xip.io/business-central" style="color: midnightblue" target="_blank">http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</a>
-                <br><br>
+                <p style="font-size: 30px; color: darkred">http://destinasia-rules-demo-appdev-in-cloud.192.168.99.100.nip.io/business-central</p>
                 <ul>
                     <li><p style="font-size: 24px">user: <code style="color: darkred">erics</code></p></li>
                     <li><p style="font-size: 24px">password: <code style="color: darkred">jbossbrms1!</code></p></li>
@@ -196,12 +195,12 @@
             <div style="width: 1256px; height: 250px;" align="left">
                 If unable to open URL, add this to your hosts file:
                 <br><br>
-                <p style="font-size: 24px; color: darkred">
+                <p style="font-size: 22px; color: darkred">
                 <code>
                     $ sudo vi /etc/hosts
                     <br><br>
                     # add host for OCP demo resolution<br>
-                    192.168.99.100   destinasia-rules-demo.192.168.99.100.xip.io
+                    192.168.99.100   http://destinasia-rules-demo-appdev-in-cloud.192.168.99.100.nip.io
                 </code>
                 </p>
             </div>
