--- a/introduction.html
+++ b/introduction.html
@@ -212,8 +212,7 @@
                     <li>Enjoy the break before logging in:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 22px"><code style="color: darkred"><a href="http://destinasia-rules-demo.192.168.99.100.xip.io/business-central"
-                               style="color: darkred" target="_blank">http://destinasia-rules-demo.192.168.99.100.xip.io/business-central</a> (password: jbossbrms1!)</code></p>
+                        <li><p style="font-size: 22px"><code style="color: darkred">http://destinasia-rules-demo-appdev-in-cloud.192.168.99.100.nip.io/business-central (password: jbossbrms1!)</code></p>
                     </ul>
                 </ul>
             </div>
