Updated images lab 04.

--- a/lab04.html
+++ b/lab04.html
@@ -225,11 +225,11 @@
         </section>
 
         <section>
-            <div style="width: 1056px; height: 150px;">
+            <div style="width: 1056px; height: 100px;">
                 <h2>END LAB 4</h2>
             </div>
             <div style="width: 1056px; height: 700px;" align="left">
-                <img height="50%" width="50%" src="images/destinasia-workshop/image46.png"><img height="50%" width="50%" src="images/destinasia-workshop/image47.png">
+                <img src="images/destinasia-workshop/image46.png">
             </div>
         </section>
 
