Added split for ocp 3.6 and ocp 3.7.

--- a/index.html
+++ b/index.html
@@ -82,17 +82,20 @@
                     <div style="width: 1056px; height: 150px; color: white">
                         <h1 style="color: white">Workshop</h1>
                     </div>
-                    <div style="width: 1056px; height: 150px; color: white">
-                        <h2 style="color: white">Destinasia Travel Agency</h2>
+                    <div style="width: 1056px; height: 180px; color: white">
+                        <h3 style="color: white">Cloud, AppDev, Containers,</h3>
+                        <h3 style="color: white">Agile Integration and more...</h3>
                     </div>
-                    <div style="width: 1056px; height: 220px; color: white">
+                    <div style="width: 1056px; height: 200px; color: white">
                             Get hands-on in this workshop installing the OpenShift Container Platform, deploying six
                             containerized services for Destinasia backend systems and testing the results.
                     </div>
                     <div style="width: 1056px; height: 100px;">
                         <ul style="color: white">
-                            <li><i><a href="introduction.html" target="_blank" style="color: red"><b>Get started with workshop
-                            introduction to your tasks.</b></a></i></li>
+                            <li><i><a href="introduction-ocp36.html" target="_blank" style="color: red"><b>Start Destinasia
+                                workshop on OpenShift Container Platform 3.6</b></a></i></li>
+                            <li><i><a href="introduction.html" target="_blank" style="color: red"><b>Start Destinasia
+                                workshop on OpenShift Container Platform 3.7</b></a></i></li>
                         </ul>
                     </div>
                 </section>
