--- a/lab06.html
+++ b/lab06.html
@@ -147,7 +147,7 @@
                 <br><br>
                 <ul>
                     <li><p style="font-size: 24px; color: darkred"><code>$ oc login -u system:admin</code></p></li>
-                    <li><p style="font-size: 24px; color: darkred"><code>$ oc create -n openshift -f 'https://raw.githubusercontent.com/redhat-developer/s2i-dotnetcore/master/dotnet_imagestreams.json'</code></p></li>
+                    <li><p style="font-size: 24px; color: darkred"><code>$ oc create -n openshift -f 'https://raw.githubusercontent.com/openshift/openshift-ansible/master/roles/openshift_examples/files/examples/v3.7/image-streams/dotnet_imagestreams.json'</code></p></li>
                 </ul>
                 <br><br>
                 Then run car service playbook again (or if build in OCP console failed, rebuild it):
@@ -167,7 +167,7 @@
                     <li>When a build finishes you see a new deployment container appears in <i>Monitoring</i>
                         view under <i>Deployments</i>:</li>
                 </ul>
-                <img src="images/destinasia-workshop/image61.png" align="right">
+                <img src="images/destinasia-workshop/image61-1.png">
             </div>
         </section>
 
@@ -176,7 +176,7 @@
                 <h2>END LAB 6</h2>
             </div>
             <div style="width: 1056px; height: 700px;" align="left">
-                <img src="images/destinasia-workshop/image62.png">
+                <img src="images/destinasia-workshop/image62-1.png">
             </div>
         </section>
 
