Updated lab 07 for ocp 3.7.

--- a/lab07.html
+++ b/lab07.html
@@ -147,7 +147,7 @@
                 <br><br>
                 <ul>
                     <li><p style="font-size: 24px; color: darkred"><code>$ oc login -u system:admin</code></p></li>
-                    <li><p style="font-size: 24px; color: darkred"><code>$ oc create -n openshift -f 'https://raw.githubusercontent.com/openshift/openshift-ansible/master/roles/openshift_examples/files/examples/v1.4/image-streams/image-streams-rhel7.json'</code></p></li>
+                    <li><p style="font-size: 24px; color: darkred"><code>$ oc create -n openshift -f 'https://raw.githubusercontent.com/openshift/openshift-ansible/master/roles/openshift_examples/files/examples/v3.7/image-streams/image-streams-rhel7.json'</code></p></li>
                 </ul>
                 <br><br>
                 Then hotel service playbook again (or if build in OCP console failed, rebuild it):
@@ -167,7 +167,7 @@
                     <li>When a build finishes you see a new deployment container appears in <i>Monitoring</i>
                         view under <i>Deployments</i>:</li>
                 </ul>
-                <img src="images/destinasia-workshop/image68.png" align="right">
+                <img src="images/destinasia-workshop/image68-1.png">
             </div>
         </section>
 
@@ -175,8 +175,8 @@
             <div style="width: 1056px; height: 100px;">
                 <h2>END LAB 7</h2>
             </div>
-            <div style="width: 1056px; height: 700px;" align="left">
-                <img src="images/destinasia-workshop/image69.png">
+            <div style="width: 1056px; height: 550px;">
+                <img src="images/destinasia-workshop/image69-1.png">
             </div>
         </section>
 
