Updated lab 09 for ocp 3.7.

--- a/lab09.html
+++ b/lab09.html
@@ -98,7 +98,7 @@
                     results if it receives a REST query that it expects, but is available here:</li>
                     <br>
                     <ul>
-                        <li><p style="font-size: 24px; color: darkred"><code>http://fusetravelagency-appdev-in-cloud.192.168.99.100.nip.io/rest/book</code></p></li>
+                        <li><p style="font-size: 24px; color: darkred"><code>http://fusetravelagency-appdev-in-cloud.192.168.64.10.nip.io/rest/book</code></p></li>
                     </ul>
                     <br>
                     <li>To test the services you can push the payload (request) to this endpoint, which is provided on the next slide.</li>
@@ -117,7 +117,7 @@
                     <ul>
                         <li><i style="font-size: 22px">Method: <code style="color: darkred">POST</code></i></li>
                         <li><i style="font-size: 22px">Header: <code style="color: darkred">Content-Type application/json</code></i></li>
-                        <li><i style="font-size: 22px">URL: <code style="color: darkred">http://fusetravelagency-appdev-in-cloud.192.168.99.100.nip.io/rest/book</code></i></li>
+                        <li><i style="font-size: 22px">URL: <code style="color: darkred">http://fusetravelagency-appdev-in-cloud.192.168.64.10.nip.io/rest/book</code></i></li>
                         <li><i style="font-size: 20px">Body: <code style="color: darkred">
                             {"flightReq":{"flightFrom":"SIN","flightTo":"PEK","flightDate":"03/08/2017","flightPassengers":2,"flightNo":"SIN22"},"hotelReq":{"hotelArrivalDate":"03/08/2017","hotelNights":33,"hotelCity":"PEK","hotelId":"Marriott"},"carReq":{"carCity":"PEK","carRentalCo":"Hertz","carType":"Econ","carStartDate":"03/08/2017","carDays":33}}</code></i></li>
                     </ul>
@@ -127,14 +127,14 @@
 
         <section>
             <div style="width: 1056px; height: 120px;">
-                <h2>FIXME: REST CLIENT URL</h2>
+                <h2>REST CLIENT URL</h2>
             </div>
             <div style="width: 1056px; height: 600px;" align="left">
                 Install or use your own REST Client, starting by selecting the <i>Method</i> and <i>URL</i>:
                 <br><br>
                 <ul>
                     <li><i style="font-size: 22px">Method: <code style="color: darkred">POST</code></i></li>
-                    <li><i style="font-size: 22px">URL: <code style="color: darkred">http://fusetravelagency-appdev-in-cloud.192.168.99.100.nip.io/rest/book</code></i></li>
+                    <li><i style="font-size: 22px">URL: <code style="color: darkred">http://fusetravelagency-appdev-in-cloud.192.168.64.10.nip.io/rest/book</code></i></li>
                 </ul>
                 <img src="images/destinasia-workshop/image78.png">
             </div>
