Updated introduciton for ocp 3.7.

--- a/introduction.html
+++ b/introduction.html
@@ -134,8 +134,7 @@
                     <li>Base needs:</li>
                     <ul>
                         <li><a href="https://access.redhat.com/downloads/content/290" style="color: midnightblue" target="_blank"><b>OpenShift CLI v3.7.9</b></a></li>
-                        <li><a href="https://www.virtualbox.org/wiki/Downloads" style="color: midnightblue" target="_blank"><b>VirtualBox for Windows</b></a></li>
-                        <li><a href="http://brewformulas.org/Xhyve" style="color: midnightblue" target="_blank"><b>Xhyve for osX with 'brew install xhyve'</b></a></li>
+                        <li><a href="https://www.virtualbox.org/wiki/Downloads" style="color: midnightblue" target="_blank"><b>VirtualBox for Windows and OSX</b></a></li>
                         <li><a href="https://github.com/dhiltgen/docker-machine-kvm/releases" style="color: midnightblue" target="_blank"><b>KVM for Linux</b></a></li>
                         <li>Ansible playbook tooling:</li>
                         <ul>
@@ -323,32 +322,32 @@
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
-            <div style="width: 980px; height: 120px; color: white">
+            <div style="width: 980px; height: 200px; color: white">
                 <h2 style="color: white;">ANSIBLE IN ACTION</h2>
                 <h4 style="color: white">BUILDING SERVICES</h4>
             </div>
             <div style="width: 100%; height: 600px;">
-                <img width="100%" height="70%" src="images/introduction/image06.png"><img width="40%" height="20%" src="images/introduction/image07.png">
+                <img src="images/introduction/image06.png">
             </div>
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
-            <div style="width: 980px; height: 120px; color: white">
+            <div style="width: 980px; height: 200px; color: white">
                 <h2 style="color: white;">ANSIBLE IN ACTION</h2>
                 <h4 style="color: white">DEPLOYING SERVICES</h4>
             </div>
             <div style="width: 100%; height: 600px;">
-                <img width="100%" height="70%" src="images/introduction/image08.png">
+                <img src="images/introduction/image08.png">
             </div>
         </section>
 
         <section data-background="images/rh-images/rh-bg-light.png" data-background-size="100%" data-background-position="center">
-            <div style="width: 980px; height: 120px; color: white">
+            <div style="width: 980px; height: 200px; color: white">
                 <h2 style="color: white;">ANSIBLE IN ACTION</h2>
                 <h4 style="color: white">SERVICES FINAL BUILDS</h4>
             </div>
             <div style="width: 100%; height: 600px;">
-                <img width="100%" height="70%" src="images/introduction/image09.png"><img width="40%" height="20%" src="images/introduction/image10.png">
+                <img src="images/introduction/image09.png">
             </div>
         </section>
 
@@ -357,7 +356,7 @@
                 <h3 style="color: white;">ANSIBLE SERVICES DEPLOYED</h3>
             </div>
             <div style="width: 100%; height: 600px;">
-                <img width="100%" height="100%" src="images/introduction/image11.png">
+                <img src="images/introduction/image11.png">
             </div>
         </section>
 
